# atlasvras

./: .buildinfo  .coveragerc  .gitignore  LICENSE  README.md  about.html  conf.py  data.html  el01z.html  eyeball.html  genindex.html  history.html  index.html  index.rst  manual.html  models.html  objects.inv  pyproject.toml  search.html  searchindex.js  tdo.html  training.html
.github/workflows/: docs.yml  testing.yml
_build/doctrees/: crabby.doctree  environment.pickle  index.doctree
_build/html/: .buildinfo  crabby.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_sources/: about.rst  data.rst  eyeball.rst  eyeball.rst.txt  history.rst  index.rst  index.rst.txt  manual.rst.txt  models.rst  tdo.rst  training.rst
atlasvras/: __init__.py
atlasvras/data/: 1000005291314656200_sn.json  1052941460110907400_pm.json  1134751930091216800_md.json  vra.mplstyle
atlasvras/el01z/: comparebot.py  garbagetnsbot.py  purgatorysentinel.py  weeklyreport.py
atlasvras/el01z/bash/: comparebot.sh  (+5 more)
atlasvras/g0t0/: goto_bot.py  parser.py
atlasvras/st3ph3n/: __init__.py  dataprocessing.py  scoreandrank.py  slackbot.py
atlasvras/tests/: test_goto_api.py  test_goto_bot_handler.py  test_goto_parser.py  test_st3ph3n_dataprocessing.py  test_st3ph3n_scoreandrank.py  test_utils_jsondata.py  test_utils_misc.py
atlasvras/utils/: exceptions.py  jsondata.py  misc.py  prettify.py
docs/: requirements.txt
docs/source/: about.rst  conf.py  data.rst  el01z.rst  eyeball.rst  history.rst  index.rst  models.rst  requirements.txt  tdo.rst  training.rst
(+12 files in other folders)
